# quator3-code

Modern Python/01_classs(helloWorld_String)/: README.md  class1.ipynb  class1.py
Modern Python/02_class(string__fstring)/: class2.ipynb  class2.py
Modern Python/03_class(operators)/: class3.ipynb  class3.py
Modern Python/04_class(list_its_methods)/: class4.ipynb  class4.py
Modern Python/05_class(list_tuple_for_loop)/: class5.ipynb  class5.py
Modern Python/06_class(if_elif_else)/: class6.ipynb  class6.py
Modern Python/07_class(dictionary)/: class7.ipynb  class7.py
Modern Python/08_class(dictionary_methods)/: class8.ipynb  class8.py
Modern Python/09_class(loop_input)/: class9.ipynb  class9.py
Modern Python/10_class(functions)/: class10.ipynb  class10.py
Modern Python/11_class(try-except)/: class11.ipynb  class11.py
Modern Python/12_class(error_and_file_handling)/: class12.ipynb  class12.py  data.csv  data.xlsx
Modern Python/13_class(oop)/: class13.ipynb
Modern Python/14_class(overloading_over_riding)/: class14.ipynb  class14.py
Modern Python/15_class(Encapsolation_Abstract_callable)/: class15.ipynb
Modern Python/16_oop(mysirg)/: main.py
Modern Python/oop/: main.py
My APIS/TODO APP/backend/todo_api/: .env  Dockerfile.dev  pyproject.toml
My APIS/TODO APP/backend/todo_api/tests/: test_main.py
My APIS/TODO APP/backend/todo_api/todo_api/: main.py
online-q3-panaverse/class01_q5/: pyproject.toml
online-q3-panaverse/class5-compose/: Dockerfile  compose.yml  pyproject.toml
online-q3-panaverse/class5-compose/class4_helloworld/: main.py
(+18 files in other folders)
